--- a/1.html
+++ b/1.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>hello world</h1>
+    <head>
+        <h1>
+            Welcome to my website!
+        </h1>
+    </head>
 </body>
 </html>
